[gd_scene load_steps=15 format=2]

[ext_resource path="res://RhythmGame/Hits/HitRoller/HitRoller.gd" type="Script" id=1]
[ext_resource path="res://RhythmGame/Hits/TargetCircle.tscn" type="PackedScene" id=2]
[ext_resource path="res://RhythmGame/Hits/HitRoller/GrowingLine2D.gd" type="Script" id=3]
[ext_resource path="res://RhythmGame/Hits/HitRoller/roller_sprites.png" type="Texture" id=4]
[ext_resource path="res://RhythmGame/Hits/hit_sprites.png" type="Texture" id=5]
[ext_resource path="res://RhythmGame/UI/LabelCustom.tscn" type="PackedScene" id=6]
[ext_resource path="res://RhythmGame/Hits/HitRoller/Roller.gd" type="Script" id=7]
[ext_resource path="res://RhythmGame/Hits/HitRoller/RollerPath.gd" type="Script" id=8]
[ext_resource path="res://RhythmGame/Hits/target_circle.shader" type="Shader" id=10]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -0.411484, 0.919983, -143.884, -11.7242, 143.884, 11.7242, 111.092, 88.4845, 0, 0, 0, 0, 240.398, 214.929 )
}

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = ExtResource( 10 )
shader_param/torus_thickness = 0.015
shader_param/torus_hardness = -5.0
shader_param/torus_radius = 0.5

[sub_resource type="CircleShape2D" id=3]
radius = 90.0

[sub_resource type="Animation" id=4]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="Animation" id=5]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="HitRoller" type="Path2D"]
modulate = Color( 1, 1, 1, 0 )
self_modulate = Color( 1, 1, 1, 1 )
curve = SubResource( 1 )
script = ExtResource( 1 )

[node name="TargetCircle" parent="." instance=ExtResource( 2 )]
material = SubResource( 2 )

[node name="GrowingLine2D" type="Line2D" parent="."]
default_color = Color( 1, 1, 1, 0.290196 )
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
script = ExtResource( 3 )

[node name="GrowthTimer" type="Timer" parent="GrowingLine2D"]

[node name="Tween" type="Tween" parent="GrowingLine2D"]

[node name="SpriteStart" type="Sprite" parent="."]
texture = ExtResource( 5 )
hframes = 6

[node name="Label" parent="SpriteStart" instance=ExtResource( 6 )]

[node name="SpriteEnd" type="Sprite" parent="."]
position = Vector2( 234.274, 208.706 )
texture = ExtResource( 5 )
hframes = 6

[node name="Label" parent="SpriteEnd" instance=ExtResource( 6 )]

[node name="RollerFollow" type="PathFollow2D" parent="."]
position = Vector2( -0.411484, 0.919983 )
rotate = false
loop = false
script = ExtResource( 8 )

[node name="Tween" type="Tween" parent="RollerFollow"]

[node name="Roller" type="Area2D" parent="RollerFollow"]
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RollerFollow/Roller"]
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="RollerFollow/Roller"]
texture = ExtResource( 4 )
hframes = 6

[node name="ScoreTimer" type="Timer" parent="RollerFollow/Roller"]

[node name="Tween" type="Tween" parent="RollerFollow/Roller"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/destroy = SubResource( 4 )
anims/show = SubResource( 5 )

[connection signal="timeout" from="GrowingLine2D/GrowthTimer" to="GrowingLine2D" method="_on_GrowthTimer_timeout"]
[connection signal="movement_finished" from="RollerFollow" to="." method="destroy"]
[connection signal="movement_finished" from="RollerFollow" to="RollerFollow/Roller" method="submit_score"]
[connection signal="mouse_entered" from="RollerFollow/Roller" to="RollerFollow/Roller" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="RollerFollow/Roller" to="RollerFollow/Roller" method="_on_mouse_exited"]
[connection signal="timeout" from="RollerFollow/Roller/ScoreTimer" to="RollerFollow/Roller" method="_on_ScoreTimer_timeout"]
